--- a/app/static/css/pages/login.css
+++ b/app/static/css/pages/login.css
@@ -5,6 +5,11 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    font-family: 'Inter', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
 }
 
 .login-form {
