--- a/app/templates/achievement_form.html
+++ b/app/templates/achievement_form.html
@@ -65,7 +65,7 @@
         
         <div class="form-actions">
             <button type="submit" class="btn btn-primary">Save</button>
-            <a href="{{ url_for('achievements_bp.show_achievements') }}" class="btn btn-danger">Cancel</a>
+            <a href="{{ url_for('settings_bp.settings', default_tab='achievements') }}" class="btn btn-danger">Cancel</a>
         </div>
     </form>
 
