--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -120,11 +120,7 @@
               <i class="fas fa-edit"></i>
             </button>
             
-            {% if contact.user %}
-            <button class="icon-btn" disabled title="User already exists" style="color: #ccc; cursor: not-allowed;">
-                <i class="fas fa-user-plus"></i>
-            </button>
-            {% else %}
+            {% if not contact.user %}
             <form action="{{ url_for('users_bp.quick_add_user', contact_id=contact.id) }}" method="POST" style="display:inline;" onsubmit="return confirm('Create user for {{ contact.Name }}?');">
                 <button type="submit" class="icon-btn" title="Quick Add User">
                     <i class="fas fa-user-plus"></i>
