--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -25,6 +25,10 @@
             </td>
             </tr>
             <tr>
+            <td><label for="member_id">Member ID:</label></td>
+            <td><input type="text" id="member_id" name="member_id" placeholder="Optional" /></td>
+            </tr>
+            <tr>
             <td><label for="club">Club:</label></td>
             <td>
                 <input type="text" id="club" name="club" placeholder="e.g., Club1/Club2" />
