--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -63,14 +63,15 @@
     <thead>
       <tr>
         <th class="sortable" data-column-index="0" data-sort-type="string">Name</th>
-        <th class="sortable" data-column-index="1" data-sort-type="string">Club</th>
-        <th class="sortable" data-column-index="2" data-sort-type="string">Participation</th>
-        <th class="sortable" data-column-index="3" data-sort-type="string">Completed Paths</th>
-        <th class="sortable" data-column-index="4" data-sort-type="string">Credentials</th>
-        <th class="sortable" data-column-index="5" data-sort-type="string">Next Project</th>
-        <th class="sortable" data-column-index="6" data-sort-type="string">Mentor</th>
+        <th class="sortable" data-column-index="1" data-sort-type="string">Participation</th>
+        <th class="sortable" data-column-index="2" data-sort-type="string">Phone Number</th>
+        <th class="sortable" data-column-index="3" data-sort-type="string">Club</th>
+        <th class="sortable" data-column-index="4" data-sort-type="string">Completed Paths</th>
+        <th class="sortable" data-column-index="5" data-sort-type="string">Credentials</th>
+        <th class="sortable" data-column-index="6" data-sort-type="string">Next Project</th>
+        <th class="sortable" data-column-index="7" data-sort-type="string">Mentor</th>
         {% if is_authorized('CONTACT_BOOK_EDIT') %}
-        <th class="action-header" data-column-index="7">Actions</th>
+        <th class="action-header" data-column-index="8">Actions</th>
         {% endif %}
       </tr>
     </thead>
@@ -86,7 +87,6 @@
            <span class="badge-member-id" style="margin-left: 5px; font-size: 0.8em; vertical-align: text-top; background-color: rgb(231, 231, 228); border-radius: 5px; padding: 2px 5px;">{{ contact.Member_ID }}</span>
            {% endif %}
          </td>
-         <td>{{ contact.Club if contact.Club else '-' }}</td>
          <td data-sort="{{ '1' if contact.is_qualified else '0' }}_{{ '%03d'|format(contact.tt_count) }}_{{ '%03d'|format(contact.role_count) }}_{{ '%03d'|format(contact.attendance_count) }}_{{ '%03d'|format(contact.award_count) }}">
              <div class="participation-container">
                  {% if contact.is_qualified %}
@@ -110,7 +110,8 @@
                  </a>
              </div>
          </td>
-         <!-- Swapped Order: Completed Paths first, then Credentials -->
+         <td>{{ contact.Phone_Number if contact.Phone_Number else '-' }}</td>
+         <td>{{ contact.Club if contact.Club else '-' }}</td>
          <td>{{ contact.Completed_Paths if contact.Completed_Paths else '-' }}</td>
          <td>{{ contact.credentials if contact.credentials else '-' }}</td>
          <td>{{ contact.Next_Project if contact.Next_Project else '-' }}</td>
